# Tax-Calculator---Haskell

./: .gitignore  DataTypes.hs  IOHandler.hs  Main.hs  MainWeb.hs  Processing.hs  README.md  Utils.hs  WebServer.hs  index.html  tax-calculator.cabal  taxpayers.csv
static/: index.html
